samples/_failures_safe/1761720609_00aa72_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4cf2e725.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_4cf2e725.c:162:17: error: expected declaration or statement at end of input
  162 |                 return 0;
      |                 ^~~~~~
./samples/SAFE/__tmp_4cf2e725.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4cf2e725.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4cf2e725.c:162:17: error: expected declaration or statement at end of input
